
added new command 10112 to show the server links (colten edwards)

modified buffer_queue() preallocate a chunk of data (1k/16k) and create a
list of buffers instead of calling realloc()

modified buffer_compress() to allocate a 16k buffer and compress as much data
as will fit in it.

wrote a custom db for storing the shared files. MySQL is now only used for
account management.

Changes from 0.11
=================

added support for using poll() instead of select() on systems that support
it

server now prints "VERSION opennap <version>" as the first line of the MOTD.
it is intended that clients can use this information to enable optional
features that only work with this version of the server, but without
disturbing the official windows client

fixed bug in share_file() where the escaped filename was not inserted into
the db

fixed bug where the argument to the TYPE search parameter was not skipped

search() should return a 404 error if the search failed

modified synch_server() to first sync the users and channels, then do a bulk
dump of the library table in hopes of improving performance.

added support for account registration

added support for change email (702) command

added support for the emote (824) command

win32 port by "Damian Hodgkiss" <mian@thirty4.com>

bumped up default client queue length to 100Kbytes

added support for the sharing limit messages (619/620)

modified level() to update the db for registered accounts so that level
changes are persistent across logins

added AM_MAINTAINER_MODE macro to configure.in to disable the maintener
rules in the genereate Makefile

Changes from 0.10
=================
added max_connections config variable

rewrote i/o handling to avoid copying data by using a buffer list.

changed server->server compression to use a stream to compress the entire
session.

servers now negotiate the compression level upon connection

added support for searching the database using soundex hashes.  client